boreal/tests/assets/invalid_files/parsing/string_modifier_incompatible6.yar
// [error: string modifiers base64 and fullword are incompatible]
rule a {
    strings:
        $a = "a" base64 private fullword
    condition:
        $a
}
